--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Exemplo de AJAX com XMLHttpRequest</title>
+
 </head>
 <body>
-
-    <script src="script.js"></script>
+    <h1>Exemplo de AJAX com XMLHttpRequest</h1>
+    <button onclick="carregarConteudo()">Carregar Conteúdo</button>
+    <div id="conteudo"></div>
+    <script src="script.js" > </script>
 </body>
+
 </html>
